--- a/frontend-student-react/public/test.html
+++ b/frontend-student-react/public/test.html
@@ -1,134 +1,143 @@
-<!doctype html>
-<html lang="vi" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <title>Đặt lại mật khẩu</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: linear-gradient(to right, #f88f50, #f7e75c);
-      font-family: Arial, sans-serif;
-    }
-    h2 {
-      color: #007bff;
-      font-weight: 600;
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .form-control {
-      border: none;
-      border-bottom: 1px solid #555;
-      border-radius: 0;
-      margin-bottom: 20px;
-      background: transparent;
-    }
-    .form-control:focus {
-      box-shadow: none;
-      border-bottom: 2px solid #007bff;
-      background: transparent;
-    }
+    <meta charset="UTF-8">
+    <title>Biểu mẫu đăng kí nội trú</title>
 
-  </style>
+    <!-- Bootstrap 3 -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+    <style>
+        body {
+            background: linear-gradient(135deg, #f7c6ff, #9fd3ff);
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: Arial, sans-serif;
+        }
+
+        .form-container {
+            background: rgba(255, 255, 255, 0.2);
+            padding: 40px;
+            border-radius: 10px;
+            width: 70%;
+            max-width: 900px;
+            box-shadow: 0 0 20px rgba(0,0,0,0.1);
+        }
+
+        h2 {
+            text-align: center;
+            margin-bottom: 30px;
+            font-weight: 600;
+            color: #2d4f7c;
+        }
+
+        .form-group input {
+            border: none;
+            border-bottom: 1px solid #555;
+            border-radius: 0;
+            background: transparent;
+            box-shadow: none;
+        }
+
+        .form-group input:focus {
+            border-bottom: 1px solid #1b73e8;
+            box-shadow: none;
+        }
+
+        .submit-btn {
+            width: 200px;
+            margin: 20px auto 0;
+            display: block;
+            background: #4ba3ff;
+            color: white;
+            font-size: 18px;
+            padding: 10px;
+            border-radius: 6px;
+        }
+
+        .radio-inline input {
+            margin-top: 2px;
+        }
+        .form-group label {
+          font-size: 16px;
+        }
+
+        .form-group input {
+            font-size: 16px;
+        }
+        .form-group input.form-control {
+        border: none;
+        border-bottom: 1px solid #555;
+        border-radius: 0;
+        background: transparent;
+        box-shadow: none;
+
+        padding-left: 0 !important;  /* bỏ thụt đầu dòng */
+         }
+
+
+    </style>
 </head>
-<body>
 
 <body>
-<div class="container">
-  <div class="row align-items-center">
-    <div class="col-md-6 text-center mb-6 mb-md-0">
-      <a th:href="@{/}">
-        <img th:src="@{/assets/images/dormitory.png}" alt="Dormitory" class="img-fluid w-75">
-      </a>
-    </div>
 
-    <div class="col-md-6">
-      <div id="loading" class="text-center">
-        <p>⏳ Đang kiểm tra liên kết...</p>
-      </div>
+<div class="form-container">
+    <h2>Biểu mẫu đăng kí nội trú ký túc xá</h2>
 
-      <div id="errorMessage" class="text-center text-danger d-none">
-        <p>❌ Liên kết không hợp lệ hoặc đã hết hạn!</p>
-      </div>
+    <form>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="form-group">
+                    <label>Họ và Tên</label>
+                    <input type="text" class="form-control">
+                </div>
+            </div>
 
-      <div id="resetContainer" class="d-none">
-        <div class="text-center mb-3">
-          <i class="bi bi-person-circle" style="font-size: 12rem; color: #007bff;"></i>
+            <div class="col-sm-6">
+                <div class="form-group">
+                    <label>MSSV</label>
+                    <input type="text" class="form-control">
+                </div>
+            </div>
         </div>
-        <h2>Đặt Lại Mật Khẩu</h2>
-        <form id="resetForm">
-          <input type="password" id="newPassword" class="form-control mb-3" placeholder="Mật khẩu mới" required>
-          <input type="password" id="confirmPassword" class="form-control mb-3" placeholder="Xác nhận mật khẩu" required>
-          <button type="submit" class="btn btn-success w-100">Xác nhận</button>
-        </form>
-        <p id="message" class="text-center mt-3"></p>
-      </div>
-    </div>
-  </div>
+
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="form-group">
+                    <label>Ngày sinh</label>
+                    <input type="date" class="form-control">
+                </div>
+            </div>
+
+            <div class="col-sm-6">
+                <div class="form-group">
+                    <label>Lớp</label>
+                    <input type="text" class="form-control">
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label>Email</label>
+            <input type="email" class="form-control">
+        </div>
+
+        <div class="form-group">
+            <label>Số điện thoại</label>
+            <input type="text" class="form-control">
+        </div>
+
+        <div class="form-group">
+            <label>Giới tính</label><br>
+            <label class="radio-inline"><input type="radio" name="gender"> Nam</label>
+            <label class="radio-inline"><input type="radio" name="gender"> Nữ</label>
+        </div>
+
+        <button type="submit" class="btn submit-btn">Gửi đăng kí</button>
+    </form>
 </div>
-<script>
-  const params = new URLSearchParams(window.location.search);
-  const token = params.get("token");
-  if (token) {
-    window.history.replaceState({}, document.title, window.location.pathname);
-  }
-
-  const loadingEl = document.getElementById("loading");
-  const resetContainer = document.getElementById("resetContainer");
-  const errorEl = document.getElementById("errorMessage");
-  const messageEl = document.getElementById("message");
-
-  // 🔒 Nếu không có token, chặn ngay
-  if (!token) {
-    loadingEl.classList.add("d-none");
-    errorEl.classList.remove("d-none");
-  } else {
-    fetch(`http://localhost:8080/api/auth/reset-password?token=${token}`)
-            .then(res => res.json())
-            .then(data => {
-              loadingEl.classList.add("d-none");
-              if (data.status === "success") {
-                resetContainer.classList.remove("d-none");
-              } else {
-                errorEl.classList.remove("d-none");
-              }
-            })
-            .catch(() => {
-              loadingEl.classList.add("d-none");
-              errorEl.classList.remove("d-none");
-            });
-  }
-
-  // 🧩 Xử lý form reset mật khẩu
-  document.getElementById("resetForm").addEventListener("submit", async function(e) {
-    e.preventDefault();
-    const newPassword = document.getElementById("newPassword").value.trim();
-    const confirmPassword = document.getElementById("confirmPassword").value.trim();
-
-    if (newPassword !== confirmPassword) {
-      messageEl.textContent = "❌ Mật khẩu xác nhận không khớp!";
-      messageEl.style.color = "red";
-      return;
-    }
-
-    const res = await fetch(`http://localhost:8080/api/auth/reset-password?token=${token}&newPassword=${newPassword}`, {
-      method: "POST"
-    });
-
-    if (res.ok) {
-      messageEl.textContent = "✅ Mật khẩu đã được cập nhật thành công!";
-      messageEl.style.color = "green";
-      setTimeout(() => window.location.href = "/login", 2000);
-    } else {
-      const text = await res.text();
-      messageEl.textContent = "❌ " + text;
-      messageEl.style.color = "red";
-    }
-  });
-</script>
 
 </body>
 </html>
